# repo-policy

./: .gitignore  LICENSE_HEADER.md  README.md  pyproject.toml  repo-policy.yml
.github/repo-analysis-output/: dependencies.json  dependencies.md  file-summaries.json  file-summaries.md  tree.json  tree.md
docs/: LICENSE_HEADER.md  REPO_ANALYSIS.md  ci.md  config.md  report-format.md  usage.md
examples/: .env.example  README.md  circleci-config.yml  github-actions-basic.yml  github-actions-full.yml  github-actions-pr-comment.yml  gitlab-ci.yml  pre-commit-config.yaml  repo-policy.baseline.yml  repo-policy.standard.yml  repo-policy.strict.yml
src/: __init__.py
src/cli/: __init__.py  main.py
src/cli/commands/: __init__.py  check.py  init.py
src/config/: __init__.py  loader.py  schema.py
src/facts/: __init__.py  extractor.py
src/integration/: __init__.py  context.py  license_headers.py  repo_analyzer.py
src/reporting/: __init__.py  json_generator.py  markdown_generator.py  metadata.py
src/rules/: __init__.py  base.py  engine.py  result.py
src/rules/docs/: __init__.py  readme_rule.py
src/rules/hygiene/: __init__.py  ci_rule.py  file_size_rule.py  forbidden_files_rule.py  gitignore_rule.py
src/rules/license/: __init__.py  header_rule.py  (+2 more)
src/utils/: __init__.py  glob_matcher.py
tests/: __init__.py
tests/cli/: __init__.py  test_check.py  test_init.py  test_main.py
tests/config/: __init__.py  test_loader.py  test_schema.py
tests/facts/: __init__.py  test_extractor.py
tests/integration/: test_context.py  test_license_headers.py  test_repo_analyzer.py
tests/reporting/: __init__.py  test_json_generator.py  test_markdown_generator.py  test_metadata.py
(+2 files in other folders)
